<resources>
    <string name="app_name">MyPasswordManager</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_credenziali">Credenziali</string>
    <string name="title_dashboard">Aggiungi</string>
    <string name="title_impostazioni">Impostazioni</string>
    <string name="erroreCifratura">Si è verificato un errore durante la cifratura!</string>
    <string name="salvataggio_riuscito">Dati salvati con successo!</string>
    <string name="campo_servizio_vuoto">Il campo nome servizio è vuoto!</string>
    <string name="campo_username_vuoto">Il campo username è vuoto!</string>
    <string name="campo_password_vuoto">Il campo password è vuoto!</string>
    <string name="credenzialisalvate">Le credenziali sono state modificate con successo!</string>
    <string name="errore">Si è verificato un errore inaspettato!</string>
    <string name="erroreDecriptazione">Si è verificato un errore nella decifratura dei dati!</string>
    <string name="modificariuscita">Credenziali aggiornate con successo!</string>
    <string name="err">Errore</string>
    <string name="cpyUP">Copia username e password</string>
    <string name="cpy">Copia password</string>
    <string name="salvataggio">Salvataggio</string>
    <string name="copia">Copia</string>
    <string name="copiaAll">Copia username e password</string>
    <string name="edit">Modifica</string>
    <string name="rimuovi">Rimuovi</string>
    <string name="chiudi">Chiudi</string>
    <string name="nome_del_servizio">Inserisci nome del servizio</string>
    <string name="inserisci_username_o_email_associata">Inserisci username o email associata</string>
    <string name="inserisci_password">Inserisci password</string>
    <string name="aggiungi_credenziali">Aggiungi credenziale</string>
    <string name="aggiorna_credenziali">Aggiorna credenziale</string>
    <string name="cerca">Cerca...</string>
    <string name="servizio">Servizio:</string>
    <string name="username">username</string>
    <string name="password">Password:</string>
    <string name="pass">pass</string>
    <string name="cancellazione">Cancellazione in corso...</string>
    <string name="cancellata">Credenziale cancellata con successo!</string>
    <string name="modalita_scura">Modalità scura</string>
    <string name="Scarica_credenziali">Salva credenziali</string>
    <string name="carica_credenziali">Carica credenziali</string>
    <string name="passphrase">Inserire passphrase per procedere</string>
    <string name="file_salvato_successo">File salvato con successo!</string>
    <string name="errore_salvataggio_file">Errore durante il salvataggio del file</string>
    <string name="credenziali_caricate">Le credenziali sono caricate con successo!</string>
    <string name="autenticazione">Autenticazione richiesta per proseguire</string>
    <string name="autenticazione_fallita">Autenticazione fallita</string>
    <string name="biometric_non_enrolled">Nessuna credenziale biometrica configurata</string>
    <string name="biometric_unavailable">La biometria non è disponibile</string>
    <string name="biometric_no_hardware">Il dispositivo non supporta la biometria</string>
    <string name="fallimento_selezione_file">Salvataggio del file annullato o fallito</string>
    <string name="fallimento_salvataggio_file">Errore nel salvataggio del file</string>
    <string name="fallimento_lettura_file">Errore nella lettura del file</string>
    <string name="caricamento">Caricamento</string>
    <string name="cambia_foto">Cambia foto</string>
    <string name="genera_qrcode">Genera qrcode</string>
    <string name="scannerizza_qrcode">Scannerizza QR Code</string>
    <string name="scansione_annullata">Scansione annullata</string>
    <string name="qrcode_prompt">Inquadra un QR Code</string>
    <string name="errore_generazione">Errore nella generazione del QR Code</string>
    <string name="errore_salvataggio_qrcode">Errore nel salvataggio del QR Code</string>
    <string name="qrcode_generato">QR Code generato con successo</string>
    <string name="qrcode_salvato">QR Code salvato nella galleria!</string>
    <string name="salva_qr_code">Salva QR Code</string>
</resources>