<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mypasswordmanager.ui.home.HomeFragment"
        android:label="@string/title_credenziali"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mypasswordmanager.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_impostazioni"
        android:name="com.example.mypasswordmanager.ui.impostazioni.ImpostazioniFragment"
        android:label="@string/title_impostazioni"
        tools:layout="@layout/fragment_impostazioni" />

    <fragment
        android:id="@+id/navigation_aggiorna_credenziali"
        android:name="com.example.mypasswordmanager.ui.aggiornaCredenziali.AggiornaFragment"
        android:label="Aggiorna credenziali"
        tools:layout="@layout/fragment_aggiorna_credenziali" />

</navigation>